force-app/main/default/objects/ssot__FundingOpportunity__dlm/fields/ssot__ApplicationTimelineId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApplicationTimelineId__c</fullName>
    <label>Application Timeline</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApplicationTimelineId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>