force-app/main/default/objects/ssot__FundingOpportunity__dlm/fields/ssot__MinimumFundingAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__MinimumFundingAmount__c</fullName>
    <label>Minimum Funding Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MinimumFundingAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>