force-app/main/default/objects/ssot__FundingOpportunity__dlm/fields/ssot__ParentFundingOpportunityId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParentFundingOpportunityId__c</fullName>
    <label>Parent Funding Opportunity</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParentFundingOpportunityId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>