force-app/main/default/objects/ssot__FundingOpportunity__dlm/fields/ssot__rel_1716670493800_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716670493800_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FundingOpportunity_BudgetTemplateId__rel</label>
    <referenceTo>ssot__Budget__dlm</referenceTo>
    <relationshipLabel>FundingOpportunity_BudgetTemplateId__rel</relationshipLabel>
    <relationshipName>rel_1716670493800_end</relationshipName>
    <type>Lookup</type>
</CustomField>