force-app/main/default/objects/ssot__FundingOpportunity__dlm/fields/ssot__rel_1716670506968_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716670506968_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FundingOpportunity_ParentFundingOppo_rel</label>
    <referenceTo>ssot__FundingOpportunity__dlm</referenceTo>
    <relationshipLabel>FundingOpportunity_ParentFundingOppo_rel</relationshipLabel>
    <relationshipName>rel_1716670506968_end</relationshipName>
    <type>Lookup</type>
</CustomField>