force-app/main/default/objects/ssot__FundingOpportunity__dlm/fields/ssot__rel_1716670512060_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716670512060_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FundingOpportunity_ProgramId_map_Pro_rel</label>
    <referenceTo>ssot__Program__dlm</referenceTo>
    <relationshipLabel>FundingOpportunity_ProgramId_map_Pro_rel</relationshipLabel>
    <relationshipName>rel_1716670512060_end</relationshipName>
    <type>Lookup</type>
</CustomField>